--- a/default.build.properties
+++ b/default.build.properties
@@ -19,3 +19,4 @@ html.test.results.dir=${test.results.dir}/html
 html.test.coverage.results.dir=${test.results.dir}/html-coverage
 javac.version=1.5
 jruby.launch.memory=384M
+jruby.test.memory=256M
