add a short test that only runs interpreted, for changes unrelated to interpreter, compiler, or runtime
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5427 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -328,6 +328,15 @@
     </emma>
   </target>
 
+  <target name="test-short" depends="
+    copy-test-files,
+    instrument,
+    run-junit-interpreted,
+    run-junit-interpreted-1.9,
+    run-spec-interpreted,
+    coverage-report">
+  </target>
+
   <target name="test" depends="
     copy-test-files,
     instrument,
