JRUBY-1528: ant Javadoc error when using target create-apidocs
git-svn-id: http://svn.codehaus.org/jruby/trunk/jruby@5448 961051c9-f516-0410-bf72-c9f7e237a7b7

--- a/build.xml
+++ b/build.xml
@@ -758,7 +758,7 @@ test/externals/rubinius/spec/parser"/>
   <target name="create-apidocs" depends="prepare" 
           description="Creates the Java API docs">
     <javadoc destdir="${api.docs.dir}" author="true" version="true" use="true" 
-             windowtitle="JRuby API" source="${javac.version}">
+             windowtitle="JRuby API" source="${javac.version}" useexternalfile="true">
       <fileset dir="${src.dir}">
         <include name="**/*.java"/>
       </fileset>
