--- a/build.xml
+++ b/build.xml
@@ -491,7 +491,7 @@ test/externals/rubinius/spec/parser"/></antcall>
   <target name="create-apidocs" depends="prepare" 
           description="Creates the Java API docs">
     <javadoc destdir="${api.docs.dir}" author="true" version="true" use="true" 
-             windowtitle="JRuby API" source="${javac.version}">
+             windowtitle="JRuby API" source="${javac.version}" useexternalfile="true">
       <fileset dir="${src.dir}">
         <include name="**/*.java"/>
       </fileset>
